Fix padding and margins on small devices

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,23 +1,3 @@
-/* Medium size screens */
-/* @media (max-width: 1100px) {
-   .home-card {
-      width: 40%;
-      margin-bottom: 5%;
-   }
-
-   .home-card h2, .card .card-icon {
-      font-size: 200%;
-   }
-
-   .card {
-      width: 40%;
-   }
-
-   footer {
-      margin: 30px 0 50px 0;
-   }
-} */
-
 /* Small size screens */
 @media (max-width: 768px) {
    #logo {
@@ -67,25 +47,17 @@
    }
    
    .home-cards {
-      padding: 30px 0 0 0;
+      width: 100%;
+      padding: 30px 15px 0 15px;
    }
-   .home-card { 
-      margin:0 0 30px 0;
-   }
-}
 
-/* Mobile devices */
-@media (max-width: 768px) {
    .home-card {
       width: 95%;
+      margin: 0 0 30px 0;
    }
 
    .home-card h2, .card .card-icon {
-      font-size:250%;
-   }
-
-   .home-cards {
-      width: 100%;
+      font-size: 250%;
    }
 
    .bg {
@@ -99,6 +71,7 @@
 
    .contact-content #hero {
       background-position: right center;
+      height: 300px;
    }
 
    .contact-form {
@@ -107,5 +80,9 @@
       left: 0;
       width: 100%;
       height: 400px;
+   }
+
+   footer h2 {
+      font-size: 1.4em;
    }
 }
